Fix alignment issues

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -5,6 +5,11 @@
   width: 30%;
   height: 100%;
   justify-content: space-between;
+
+  @include respond(tab-portrait) {
+    font-size: 1.8rem;
+    width: 100%;
+  }
 }
 
 .login,
@@ -21,11 +26,8 @@
   letter-spacing: 2px;
 
   @include respond(tab-portrait) {
-    font-size: 1.5rem;
-  }
-
-  @include respond(tab-portrait) {
     font-size: 1.8rem;
+    height: 8rem;
   }
 }
 .sign-up {
@@ -41,7 +43,7 @@
   position: fixed;
   display: flex;
   z-index: 100;
-  height: 5rem;
+  height: 10%;
   width: 100vw;
   background-color: #000;
   padding: 0 0 0 0;
@@ -56,29 +58,38 @@
 
   @include respond(tab-portrait) {
     font-size: 1.5rem;
+    height: 8rem;
   }
 
   &-brand {
+    display: flex;
+    justify-content: center;
+    align-content: center;
     font-size: 2.5rem;
     font-family: $header-font;
     background-color: $main-color;
     height: 100%;
-    padding-top: 1rem;
     font-weight: 800;
     letter-spacing: 3px;
     text-align: center;
     width: 20%;
 
-    @include respond(tab-lanscape) {
+    @include respond(tab-landscape) {
       font-size: 3rem;
     }
 
     @include respond(tab-portrait) {
       font-size: 2.8rem;
-      padding-top: 1rem;
+      width: 36%;
+    }
+
+    @include respond(phone) {
+      font-size: 2.5rem;
+      width: 50%;
     }
 
     & a {
+      align-self: center;
       color: #fff;
       padding: 0 0;
     }
@@ -94,11 +105,31 @@
   transition: all 0.3s ease;
 
   &:hover {
-    border-bottom: 3px solid $main-color;
+    // border-bottom: 1px solid $main-color;
     color: #fff;
+
+    @include respond(tab-portrait) {
+      color: $main-color;
+    }
   }
 
   @include respond(tab-portrait) {
-    font-size: 1.8rem;
+    margin-left: 0;
+    font-size: 2.5rem;
+    padding: 2rem 10rem;
+    background-color: #000;
+    border-bottom: 1px solid $border-color;
   }
+
+  @include respond(phone) {
+    margin-left: 0;
+    font-size: 2.5rem;
+    padding: 2rem 8rem;
+    background-color: #000;
+    border-bottom: 1px solid $border-color;
+  }
+}
+
+.navbar-toggler {
+  font-size: 4rem;
 }
